tests/errors/cpp/expand/merge-with-merge-token.h
// undefined behaviour
#define EXPANDME1 a ## ## b
EXPANDME1
